# rust-example-caster-api

./: .dockerignore  .env.ci  .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: audit.yml  build-test.yml  build.yml  cd.yml  ci.yml  coverage.yml
.github/workflows/actions/cache-app/: action.yml
.github/workflows/actions/setup-docker/: action.yml
apps/api/: .env.example  Cargo.toml  Dockerfile  docker-compose.app.yml
apps/api/migrations/: 20210218222150_ulid_generate.sql  20210826015831_users.sql  20210909234239_shows.sql  20210912233529_role_grants.sql  20210913221618_episodes.sql  20210922045017_after_these_messages.sql  20210923192719_role_triggers.sql
apps/api/src/: db.rs  errors.rs  events.rs  graphql.rs  lib.rs  main.rs  postgres.rs  router.rs  router_old.rs  server.rs  services.rs
apps/api/src/events/: connections.rs  handler.rs  messages.rs  router.rs
apps/api/src/tests/: mod.rs  test_server.rs  test_user_integration.rs  test_utils.rs  user_int_tests.rs  utils.rs
apps/api/test/: user_e2e_tests.rs
apps/api/tests/: test_episode_integration.rs  test_events_integration.rs  test_profile_integration.rs  test_show_integration.rs  test_user_integration.rs  test_utils.rs
config/: .gitignore  ci.toml  default.toml  local.toml.example  production.toml  test.toml.example
libs/auth/: Cargo.toml
libs/auth/src/: authenticate.rs  error.rs  errors.rs  jwks.rs  lib.rs
libs/data/: Cargo.toml
libs/data/src/: lib.rs  postgres.rs
libs/domains/: Cargo.toml
libs/domains/src/: episodes.rs  lib.rs  profiles.rs  role_grants.rs  shows.rs  users.rs
libs/domains/src/episodes/: authorization.polar  model.rs  mutations.rs  queries.rs  resolver.rs  service.rs  tests.rs
libs/domains/src/episodes/tests/: resolver_test.rs  service_test.rs
libs/domains/src/profiles/: authorization.polar  model.rs  mutations.rs  queries.rs  resolver.rs  service.rs  service_test.rs
libs/domains/src/profiles/tests/: service_test.rs
libs/domains/src/role_grants/: model.rs  service.rs  service_test.rs
libs/domains/src/shows/: authorization.polar  model.rs  mutations.rs  queries.rs  resolver.rs  service.rs  tests.rs
libs/domains/src/shows/tests/: service_test.rs
libs/domains/src/users/: authorization.polar  model.rs  mutations.rs  resolver.rs  service.rs  service_test.rs
libs/domains/src/users/tests/: service_test.rs
libs/roles/: Cargo.toml
libs/roles/src/: lib.rs  role_grant_model.rs  role_grant_service.rs
libs/shows/: Cargo.toml
libs/shows/src/: authorization.polar  episode_factory.rs  episode_model.rs  episode_mutations.rs  episode_queries.rs  episodes_resolver.rs  episodes_service.rs  episodes_service_test.rs  lib.rs  show_factory.rs  show_model.rs  show_models.rs  show_mutations.rs  show_queries.rs  shows_repo.rs  shows_repository.rs  shows_resolver.rs  shows_service.rs  shows_service_test.rs  tests.rs
libs/shows/src/tests/: episode_factory.rs  episodes_service_test.rs  mod.rs  show_model_factory.rs  shows_service_test.rs  shows_service_tests.rs
libs/shows/test/: show_model_factory.rs  shows_service_tests.rs
libs/shows/tests/: shows_factory.rs  test_episodes_service.rs  test_shows_service.rs
libs/test/: Cargo.toml
libs/test/src/: oauth2.rs
libs/testing/: Cargo.toml
libs/testing/src/: lib.rs  oauth2.rs  oso.rs
libs/users/: Cargo.toml
libs/users/src/: authorization.polar  lib.rs  profile_factory.rs  profile_model.rs  profile_mutations.rs  profile_queries.rs  profile_utils.rs  profiles_repository.rs  profiles_resolver.rs  profiles_service.rs  profiles_service_test.rs  resolver.rs  role_grant_factory.rs  role_grant_model.rs  role_grants_service.rs  tests.rs  user_model.rs  user_models.rs  user_mutations.rs  users_repository.rs  users_resolver.rs  users_service.rs  users_service_test.rs
libs/users/src/tests/: profile_factory.rs  profiles_service_test.rs  role_grant_factory.rs  role_grants_service_test.rs  user_factory.rs  users_service_test.rs
libs/users/tests/: test_profiles_service.rs  test_role_grants_service.rs  test_users_service.rs  users_factory.rs
libs/utils/: Cargo.toml
libs/utils/src/: config.rs  errors.rs  graphql.rs  http.rs  json.rs  lib.rs  ordering.rs  pagination.rs
libs/utils/src/test/: graphql.rs  mod.rs  oauth2.rs  oauth2_utils.rs
migrations/: 20210218222151_updated_at_func.sql  20210923192719_role_triggers.sql  20220409152743_gen_random_ulid.sql  20220409153117_sync_updated_at.sql  20220409153224_users_and_profiles.sql  20220409153240_role_grants.sql  20220409153302_role_triggers.sql  20220409204417_shows_and_episodes.sql  20220411175104_messages.sql
tests/test_shows/: Cargo.toml
tests/test_shows/src/: episode_factory.rs  lib.rs  show_factory.rs  test_episodes_service.rs  test_shows_service.rs
tests/test_users/: Cargo.toml
tests/test_users/src/: lib.rs  profile_factory.rs  role_grant_factory.rs  test_profiles_service.rs  test_role_grants_service.rs  test_users_service.rs  user_factory.rs
