[package]
name = "caster-api"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "^4.0", features = ["chrono"] }
async-graphql-warp = "^4.0"
caster-auth = { path = "../../libs/auth" }
caster-domains = { path = "../../libs/domains" }
caster-utils = { path = "../../libs/utils" }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
futures = "0.3"
hyper = "0.14"
hyper-tls = "0.5"
log = "0.4"
once_cell = "1.9"
oso = "0.26.0"
pretty_env_logger = "0.4"
rand = "0.8"
sea-orm = { version = "^0.9", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "^0.6", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"
ulid = "1.0.0"
warp = "0.3"

[dev-dependencies]
caster-testing = { path = "../../libs/testing" }
hyper = "0.14"
hyper-tls = "0.5"
mockall = "0.11"
pretty_assertions = { version = "^1.2" }
