[package]
name = "caster-api"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "6.0", features = ["chrono"] }
async-graphql-axum = "6.0"
axum = "0.6"
biscuit = "0.6.0-beta1"
caster-auth = { path = "../../libs/auth" }
caster-domains = { path = "../../libs/domains" }
caster-utils = { path = "../../libs/utils" }
chrono = { version = "0.4.19", features = ["serde"] }
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
hyper = "1.2"
hyper-tls = "0.5"
log = "0.4"
once_cell = "1.9"
oso = "0.27"
rand = "0.8"
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ulid = "1.0"

[dev-dependencies]
caster-testing = { path = "../../libs/testing" }
hyper = "1.2"
hyper-tls = "0.5"
mockall = "0.11"
pretty_assertions = { version = "1.2" }
url = "2.0.0"
