[package]
name = "caster-auth"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
caster-utils = { path = "../../libs/utils" }
anyhow = "1.0"
biscuit = "0.6.0-beta1"
hyper = "0.14"
hyper-tls = "0.5"
log = "0.4"
jsonwebtoken = "8.0"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.11"
rand = "0.8"
