[package]
name = "caster-auth"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[features]
integration = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1.41"
axum = "0.6"
biscuit = "0.6.0-beta1"
caster-utils = { path = "../../libs/utils" }
http = "0.2"
hyper = "1.0"
hyper-tls = "0.5"
jsonwebtoken = "9.1"
log = "0.4"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
mockall = "0.11"
rand = "0.8"
