[package]
name = "caster-data"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
mockall = "0.8.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.68"
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
tokio = { version = "1", features = ["full"] }
