[package]
name = "caster-domains"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "6.0", features = ["chrono", "dataloader"] }
async-trait = "0.1.41"
caster-auth = { path = "../auth" }
caster-utils = { path = "../utils" }
caster-testing = { path = "../testing" }
chrono = { version = "0.4.19", features = ["serde"] }
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
hyper = "1.2"
oso = "0.27.0"
oso-derive = "0.27.0"
rand = "0.8"
sea-orm = { version = "0.12", features = [
    "macros",
    "mock",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
maplit = { version = "1" }
mockall = "0.11"
pretty_assertions = { version = "1.2" }
rand = "0.8"
slug = "0.1.4"
