[package]
name = "caster-shows"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "3.0", features = ["chrono"] }
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
jsonpath_lib = "0.3.0"
mockall = "0.11"
rand = "0.8"
