[package]
name = "caster-testing"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
caster-utils = { path = "../utils" }
fake = { version = "2.4", features = ["derive", "chrono", "http", "uuid"] }
hyper = "0.14"
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
