[package]
name = "caster-testing"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
hyper = "0.14"
hyper-tls = "0.5"
mockall = "0.11"
oso = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
caster-utils = { path = "../../libs/utils" }
tokio = { version = "1", features = ["full"] }
