[package]
name = "caster-users"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "3.0", features = ["chrono"] }
async-trait = "0.1.41"
caster-auth = { path = "../auth" }
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
shaku = "0.6.1"
once_cell = "1.9"

[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
jsonpath_lib = "0.3.0"
mockall = "0.11"
rand = "0.8"
