[package]
name = "caster-users"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "3.0", features = ["chrono"] }
async-trait = "0.1.41"
caster-auth = { path = "../auth" }
caster-utils = { path = "../utils" }
chrono = { version = "0.4.19", features = ["serde"] }
hyper = "0.14"
jsonwebtoken = "8.0"
sea-orm = { version = "0.6", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.9"

[dev-dependencies]
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
jsonpath_lib = "0.3.0"
mockall = "0.11"
rand = "0.8"
