[package]
name = "caster-utils"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "^4.0", features = ["chrono"] }
figment = { version = "0.10.6", features = ["env", "toml"] }
hyper = "0.14"
hyper-tls = "0.5"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
