[package]
name = "caster-test-shows"
version = "0.1.0"
authors = ["Brandon Konkle <brandon@konkle.us>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
fake = { version = "2.4", features = ['derive', 'chrono', 'http', 'uuid'] }
jsonpath_lib = "0.3.0"
maplit = { version = "^1" }
mockall = "0.11"
pretty_assertions = { version = "^0.7" }
rand = "0.8"
sea-orm = { version = "0.7.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
], default-features = false }
slug = "0.1.4"
caster-shows = { path = "../../libs/shows" }
caster-utils = { path = "../../libs/utils" }
tokio = { version = "1", features = ["full"] }
